# vulavula-examples

./: README.md
1-intent-detection-and-language-switching/: README.md  example.env  pyproject.toml
1-intent-detection-and-language-switching/data/: intent_examples.json
1-intent-detection-and-language-switching/src/intent_detection_and_language_switching/: main.py
1-intent-detection-and-language-switching/src/intent_detection_and_language_switching/client/: vulavula_client.py
1-intent-detection-and-language-switching/src/intent_detection_and_language_switching/domain/: intent_example_parser.py
1-intent-detection-and-language-switching/src/intent_detection_and_language_switching/domain/schema/: __init__.py  intent_detection.py
1-intent-detection-and-language-switching/src/knowledge_base_search/: main.py
1-intent-detection-and-language-switching/src/knowledge_base_search/client/: vulavula_client.py
1-intent-detection-and-language-switching/src/knowledge_base_search/domain/schema/: knowledge_base.py  knowledgebase.py
2-transcription/: README.md
2-transcription/src/fast_transcription/: __main__.py  settings.py
3-transcription/: .env.example  .gitignore  README.md  pyproject.toml
3-transcription/src/fast_transcription/: __main__.py  settings.py
6-s3-audio-processor/: README.md  deploy_lambda.sh  lambda_function.py  processor.py
