[project]
name = "1-intent-detection-and-language-switching"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lepapa Engineering", email = "engineering@lelapa.ai"},
]
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.10.3",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
